--- a/99.jframe-web-main/src/main/webapp/WEB-INF/web.xml
+++ b/99.jframe-web-main/src/main/webapp/WEB-INF/web.xml
@@ -42,5 +42,17 @@
         <filter-name>CharacterEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <filter>
+        <filter-name>xssSpringFilter</filter-name>
+        <filter-class>org.jframe.web.security.XssFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>utf-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>xssSpringFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
